--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@keplr-wallet/types": "^0.12.119",
+    "@rainbow-me/rainbowkit": "^2.1.5",
+    "@tanstack/react-query": "^5.52.1",
     "apexcharts": "^3.52.0",
     "axios": "^1.7.3",
     "emotion-reset": "^3.0.1",
@@ -23,7 +25,8 @@
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
-    "viem": "2.x"
+    "viem": "2.x",
+    "wagmi": "^2.12.7"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
