--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
+    "react-spinners": "^0.14.1",
     "viem": "2.x",
     "wagmi": "^2.12.7"
   },
